--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ExamPortal
-spring.datasource.username=root
+spring.datasource.url=jdbc:ppostgresql://localhost:3306/db9ud8eo3ck8lm
+spring.datasource.username=njpzypcimudjmo
 spring.datasource.password=1234567898A@z
 
 spring.jpa.hibernate.ddl-auto=update
